{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 446,
  "lineage": "1d15edc0-7c67-18a7-8fa7-fb404c51c5d7",
  "resources": [
    {
      "module": "module.infra_node",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "apps-public-ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.247.246.231",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-07-01T14:07:36.519-07:00",
            "id": "terraform-project-244918/southamerica-east1/terraform-project-apps",
            "name": "terraform-project-apps",
            "network_tier": "PREMIUM",
            "project": "terraform-project-244918",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/regions/southamerica-east1/addresses/terraform-project-apps"
          }
        }
      ]
    },
    {
      "module": "module.bastion_node",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "bastion-public-ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.247.254.33",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-07-01T14:07:36.516-07:00",
            "id": "terraform-project-244918/southamerica-east1/terraform-project-bastion",
            "name": "terraform-project-bastion",
            "network_tier": "PREMIUM",
            "project": "terraform-project-244918",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/regions/southamerica-east1/addresses/terraform-project-bastion"
          }
        }
      ]
    },
    {
      "module": "module.master_node",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master-public-ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.199.74.250",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-07-01T14:07:45.169-07:00",
            "id": "terraform-project-244918/southamerica-east1/terraform-project-master",
            "name": "terraform-project-master",
            "network_tier": "PREMIUM",
            "project": "terraform-project-244918",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/regions/southamerica-east1/addresses/terraform-project-master"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "any-to-master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.334-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-any-to-master",
            "name": "terraform-project-any-to-master",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-any-to-master",
            "source_ranges": [
              "0.0.0.0/0",
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-master"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "any-to-routers",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.734-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-any-to-routers",
            "name": "terraform-project-any-to-routers",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-any-to-routers",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-infra"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-to-any",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.897-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-bastion-to-any",
            "name": "terraform-project-bastion-to-any",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-bastion-to-any",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-bastion"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-node"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external-to-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:09:13.082-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-external-to-bastion",
            "name": "terraform-project-external-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-external-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-bastion"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gfs-to-gfs",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2222"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.327-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-gfs-to-gfs",
            "name": "terraform-project-gfs-to-gfs",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-gfs-to-gfs",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-gfs"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-gfs"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "infra-to-infra",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9200",
                  "9300"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:09:13.087-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-infra-to-infra",
            "name": "terraform-project-infra-to-infra",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-infra-to-infra",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-infra"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-infra"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "infra-to-node",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10250"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:09:18.617-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-infra-to-node",
            "name": "terraform-project-infra-to-node",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-infra-to-node",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-infra"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-node"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master-to-master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2379",
                  "2380"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.392-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-master-to-master",
            "name": "terraform-project-master-to-master",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-master-to-master",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-master"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-master"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master-to-node",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10250"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.402-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-master-to-node",
            "name": "terraform-project-master-to-node",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-master-to-node",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-master"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-node"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "node-to-gfs",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "111",
                  "3260",
                  "24007-24010",
                  "49152-49664"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "111"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.628-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-node-to-gfs",
            "name": "terraform-project-node-to-gfs",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-node-to-gfs",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-node"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-gfs"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "node-to-master",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8053"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8053"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.281-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-node-to-master",
            "name": "terraform-project-node-to-master",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-node-to-master",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-node"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-master"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "node-to-node",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4789"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-07-01T14:08:39.206-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-project-node-to-node",
            "name": "terraform-project-node-to-node",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "priority": 1000,
            "project": "terraform-project-244918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/firewalls/terraform-project-node-to-node",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "terraform-project-node"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "terraform-project-node"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.osecluster-network",
            "google_compute_subnetwork.osecluster-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.app_node",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_node",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.bastion_node",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_node",
      "provider": "provider.google"
    },
    {
      "module": "module.infra_node",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "infra_node",
      "provider": "provider.google"
    },
    {
      "module": "module.master_node",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master_node",
      "provider": "provider.google"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "osecluster-network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "terraform-project-net",
            "name": "terraform-project-net",
            "project": "terraform-project-244918",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "osecluster-subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-07-01T14:08:10.999-07:00",
            "enable_flow_logs": false,
            "fingerprint": "r2GY1eOt0zM=",
            "gateway_address": "10.240.0.1",
            "id": "southamerica-east1/terraform-project-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "terraform-project-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/global/networks/terraform-project-net",
            "private_ip_google_access": false,
            "project": "terraform-project-244918",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-project-244918/regions/southamerica-east1/subnetworks/terraform-project-subnet"
          },
          "depends_on": [
            "google_compute_network.osecluster-network"
          ]
        }
      ]
    }
  ]
}